[package]
name = "exex"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
futures = "0.3.30"
rusqlite = { version = "0.31.0", features = ["bundled", "serialize"] }

tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
reqwest-oauth1 = "0.2.4"
reqwest = { version = "0.11.10" }
log = "0.4.21"
env_logger = "0.11.3"
serde = "1.0.203"
serde_json = "1.0.117"
dotenv = "0.15.0"
openai-rust = "1.5.2"
url = "2.5.1"
serde_urlencoded = "0.7.1"
serde_qs = "0.13.0"
axum = "0.7.5"
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = [
    "full",
    "signer-mnemonic"

] }

futures-util = "0.3"
rusqlite-from-row = "0.2.4"
tower-http = {version = "0.5.2", features =["cors"]}
http = "1.1.0"
axum-server = {version = "0.6.0", features = ["tls-rustls"]}
bincode = "1.3.3"
getrandom = "0.2.15"
