[package]
name = "teleport"
version = "0.1.0"
edition = "2021"
default-run = "teleport"

[dependencies]
hex = "0.4"
eyre = "0.6.12"
futures = "0.3.30"
rusqlite = { version = "0.31.0", features = ["bundled", "serialize"] }

tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest-oauth1 = "0.2.4"
reqwest = { version = "0.11.10", features = ["json", "multipart"] }
log = "0.4.21"
env_logger = "0.11.3"
serde = "1.0.203"
serde_json = "1.0.117"
dotenv = "0.15.0"
openai-rust = "1.5.2"
url = "2.5.1"
serde_urlencoded = "0.7.1"
serde_qs = "0.13.0"
axum = { version = "0.7.5", features = ["macros"] }
alloy = { git = "https://github.com/alloy-rs/alloy", version = "^0.6.2", features = [
    "full",
    "signer-mnemonic"

] }

futures-util = "0.3"
rusqlite-from-row = "0.2.4"
tower-http = {version = "0.5.2", features =["cors"]}
http = "1.1.0"
axum-server = {version = "0.6.0", features = ["tls-rustls"]}
bincode = "1.3.3"
getrandom = "0.2.15"
acme-lib = "0.9.1"
openssl = "0.10.63"
sha2 = "0.10.8"
tokio-postgres = "0.7.2"
rustls = "0.19.0"
webpki-roots = "0.21.0"
tokio-postgres-rustls = "0.8.0"
cuid = "1.3.3"
chrono = "0.4.38"
rand = "0.8.5"
axum-extra = {version="0.9.3", features=["cookie"]}
askama = "0.12.1"
serde_with = "3.9.0"
oauth1-request = "0.3.3"
rayon = "1.10.0"
hkdf = "0.12.4"

[features]
default = ["https"]
https = []
